<resources>
    <string name="app_name">geniuscop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="n_vel_1">Nível 1</string>
    <string name="come_ar">Começar</string>
    <string name="tutorial">Tutorial</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="iniciar">Iniciar</string>
    <string name="configura_es">Configurações</string>
    <string name="progresso">Progresso</string>
    <string name="ajuda">Ajuda</string>
    <string name="progresso2">Progresso</string>
    <string name="bem_vindo2">Bem vindo!</string>
    <string name="type_your_email1">Type your Email</string>
    <string name="type_your_password1">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="configura_e">Configuraçes</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="detalhes">Detalhes</string>
    <string name="restaurar_configura_oes_padrao">Restaurar configuraçoes padrao</string>
    <string name="efeitos_sonoros_ligados">Efeitos sonoros ligados</string>
    <string name="msica_ligada">Msica ligada</string>
    <string name="sonoro">Sonoro</string>
    <string name="visualiza_ao">Visualização</string>
    <string name="conf">Configurações</string>
    <string name="modo_dif_cil">Modo difícil</string>
    <string name="ja">Clique aqui se você já possui uma conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">entrou</string>
    <string name="close_nav">fechou</string>
    <string name="sign_upp">Clique aqui para criar uma conta</string>
    <string name="prof">Perfil</string>
    <string name="bem_vindo_registre_se">bem vindo! \nRegistre-se</string>
</resources>