<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/genius1"
    android:gravity="center"
    android:id="@+id/settings_layout"
    android:orientation="horizontal"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/voltar"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:backgroundTint="#2196F3"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/txtConfigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/conf"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/voltar"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="417dp"
        android:layout_height="296dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/perfil"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textStyle="bold" />-->

        <!--        <Button-->
        <!--            android:id="@+id/perfiljogador"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/editar_perfil" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detalhes"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modo_dif_cil"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/visualiza_ao"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Modo escuro"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sonoro"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/msica_ligada"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/switchSound2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/efeitos_sonoros_ligados"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/resetConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurar_configura_oes_padrao" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>